<resources>
    <string name="app_name">PursheCat</string>
    <string name="tony_um_gato_de_pelagem_laranja_com_olhos_verdes_faiscantes_ele_conhecido_por_suas_habilidades_excepcionais_nas_artes_marciais_felinas_incluindo_garras_afiadas_e_agilidade_surpreendente_determinado_e_destemido_tony_embarca_em_uma_jornada_para_recuperar_sua_comida_roubada_e_enfrenta_a_gangue_liderada_pelo_chef_rat_o_demonstrando_coragem_e_destreza_em_sua_busca_sua_hist_ria_se_torna_uma_lenda_lembrando_a_todos_que_por_tr_s_da_apar_ncia_fofa_de_um_gato_pode_haver_um_her_i_formid_vel">Tony é um gato de pelagem laranja, com olhos verdes faiscantes. Ele é conhecido por suas habilidades excepcionais nas artes marciais felinas, incluindo garras afiadas e agilidade surpreendente. Determinado e destemido, Tony embarca em uma jornada para recuperar sua comida roubada e enfrenta a gangue liderada pelo Chef Ratão, demonstrando coragem e destreza em sua busca. Sua história se torna uma lenda, lembrando a todos que por trás da aparência fofa de um gato pode haver um herói formidável</string>
    <string name="todo">TODO</string>
    <string name="Nada">TODO</string>
    <string name="Nada2">TODO</string>
    <string name="Nada3">TODO</string>
    <string name="bra_o_direito">Braço Direito</string>
    <string name="chefe">Chefe</string>
    <string name="protagonista">Protagonista</string>
    <string name="personagens">Personagens</string>
    <string name="Nada4">TODO</string>
    <string name="Nada6">TODO</string>
    <string name="o_gigante_rato_apelidado_de_chef_rat_o_o_l_der_imponente_e_tem_vel_da_gangue_de_ratos_conhecida_como_quot_a_mafia_quot_ele_se_destaca_com_seu_tamanho_robusto_e_olhos_frios_comandando_com_autoridade_o_chef_rat_o_o_mentor_do_sprinter_e_ele_um_desafio_formid_vel_para_tony_em_sua_busca_para_recuperar_sua_comida_roubada_sua_presen_a_intimidante_e_for_a_bruta_tornam_o_confronto_final_com_tony_ainda_mais_pico_e_perigoso">O Gigante Rato, apelidado de Chef Ratão, é o líder imponente e temível da gangue de ratos conhecida como \"A mafia\". Ele se destaca com seu tamanho robusto, e olhos frios. Comandando com autoridade, o Chef Ratão é o mentor do Sprinter, e ele é um desafio formidável para Tony em sua busca para recuperar sua comida roubada. Sua presença intimidante e força bruta tornam o confronto final com Tony ainda mais épico e perigoso.</string>
    <string name="todo2">TODO</string>
    <string name="todo4">TODO</string>
    <string name="nada33">TODO</string>
    <string name="todo3423423">TODO</string>
    <string name="k12312123">TODO</string>
    <string name="a2312312312312">TODO</string>
    <string name="cen_rio_2">Cenário 2</string>
    <string name="cen_rio_3">Cenário 3</string>
    <string name="cen_rios">Cenários</string>
    <string name="uma_cidade_com_tem_tica_japonesa_um_lugar_encantador_que_combina_a_arquitetura_a_cultura_e_a_est_tica_tradicional_do_jap_o_com_uma_pitada_de_modernidade_aqui_est_uma_descri_o_imagin_ria_de_uma_cidade_com_essa_tem_tica_nome_da_cidade_hanamachi_que_significa_quot_cidade_das_flores_quot_em_japon_s_arquitetura_e_paisagem_urbana_hanamachi_uma_cidade_que_parece_ter_sido_transportada_diretamente_do_jap_o_tradicional_para_o_s_culo_xxi_ruas_estreitas_e_sinuosas_s_o_ladeadas_por_edif_cios_de_estilo_edo_com_telhados_de_telha_lanternas_de_pedra_e_fachadas_de_madeira_decoradas_com_kanji_e_gravuras_em_estilo_ukiyo_e_as_casas_t_m_jardins_de_pedra_zen_e_pequenas_pontes_de_arco_que_atravessam_riachos_artificiais_com_carpas_coloridas_o_horizonte_da_cidade_dominado_por_um_majestoso_castelo_japon_s_com_torres_imponentes_e_muralhas_de_pedra_lembrando_os_castelos_hist_ricos_do_jap_o_feudal_cultura_a_cultura_japonesa_celebrada_em_toda_a_cidade_h_uma_abund_ncia_de_templos_e_santu_rios_xinto_stas_onde_os_moradores_podem_participar_de_cerim_nias_tradicionais_como_o_hanami_observa_o_das_flores_de_cerejeira_e_o_bon_odori_dan_a_folcl_rica_japonesa_as_ruas_est_o_repletas_de_restaurantes_que_servem_sushi_sashimi_tempur_e_outras_iguarias_japonesas_um_mercado_tradicional_oferece_produtos_frescos_como_ch_verde_peixes_e_legumes_todos_exibidos_com_belas_embalagens_artesanais_entretenimento_hanamachi_possui_um_distrito_de_entretenimento_vibrante_com_casas_de_ch_tradicionais_teatros_kabuki_e_sal_es_de_karaok_um_jardim_de_pedra_zen_um_local_tranquilo_para_meditar_e_relaxar_enquanto_um_jardim_de_bambu_oferece_trilhas_para_caminhadas_e_um_ambiente_natural_eventos_anuais_a_cidade_de_hanamachi_famosa_por_seus_festivais_tradicionais_o_festival_das_cerejeiras_em_flor_que_acontece_na_primavera_atrai_visitantes_de_todo_o_pa_s_para_admirar_as_deslumbrantes_cerejeiras_em_flor_durante_o_ver_o_o_festival_de_fogos_de_artif_cio_ilumina_o_c_u_noturno_com_espetaculares_exibi_es_pirot_cnicas_transporte_a_cidade_interligada_por_uma_rede_de_ruas_pedestres_e_ciclovias_com_riquix_s_dispon_veis_para_passeios_tur_sticos_os_transportes_p_blicos_incluem_bondes_tradicionais_e_trens_de_alta_velocidade_que_ligam_hanamachi_a_outras_cidades_do_pa_s_hanamachi_uma_cidade_m_gica_onde_o_passado_e_o_presente_se_entrela_am_proporcionando_aos_moradores_e_visitantes_uma_experi_ncia_nica_e_cativante_da_cultura_japonesa">Uma cidade com temática japonesa é um lugar encantador que combina a arquitetura, a cultura e a estética tradicional do Japão com uma pitada de modernidade. Aqui está uma descrição imaginária de uma cidade com essa temática: Nome da cidade: Hanamachi (que significa \"cidade das flores\" em japonês) Arquitetura e Paisagem Urbana: Hanamachi é uma cidade que parece ter sido transportada diretamente do Japão tradicional para o século XXI. Ruas estreitas e sinuosas são ladeadas por edifícios de estilo Edo, com telhados de telha, lanternas de pedra e fachadas de madeira decoradas com kanji e gravuras em estilo ukiyo-e. As casas têm jardins de pedra zen e pequenas pontes de arco que atravessam riachos artificiais com carpas coloridas. O horizonte da cidade é dominado por um majestoso castelo japonês, com torres imponentes e muralhas de pedra, lembrando os castelos históricos do Japão feudal. Cultura: A cultura japonesa é celebrada em toda a cidade. Há uma abundância de templos e santuários xintoístas, onde os moradores podem participar de cerimônias tradicionais, como o Hanami (observação das flores de cerejeira) e o Bon Odori (dança folclórica japonesa). As ruas estão repletas de restaurantes que servem sushi, sashimi, tempurá e outras iguarias japonesas. Um mercado tradicional oferece produtos frescos, como chá verde, peixes e legumes, todos exibidos com belas embalagens artesanais. Entretenimento: Hanamachi possui um distrito de entretenimento vibrante, com casas de chá tradicionais, teatros kabuki e salões de karaokê. Um jardim de pedra zen é um local tranquilo para meditar e relaxar, enquanto um jardim de bambu oferece trilhas para caminhadas e um ambiente natural. Eventos Anuais: A cidade de Hanamachi é famosa por seus festivais tradicionais. O Festival das Cerejeiras em Flor, que acontece na primavera, atrai visitantes de todo o país para admirar as deslumbrantes cerejeiras em flor. Durante o verão, o Festival de Fogos de Artifício ilumina o céu noturno com espetaculares exibições pirotécnicas. Transporte: A cidade é interligada por uma rede de ruas pedestres e ciclovias, com riquixás disponíveis para passeios turísticos. Os transportes públicos incluem bondes tradicionais e trens de alta velocidade que ligam Hanamachi a outras cidades do país. Hanamachi é uma cidade mágica onde o passado e o presente se entrelaçam, proporcionando aos moradores e visitantes uma experiência única e cativante da cultura japonesa.</string>
    <string name="asda3234234">TODO</string>
    <string name="o_rato_ninja_conhecido_como_sprinter_um_mestre_das_artes_marciais_roedoras_com_pelagem_discreta_e_olhos_astutos_ele_habilidoso_nas_sombras_usando_sua_agilidade_e_furtividade_para_se_opor_ao_gato_sprinter_lidera_uma_resist_ncia_dos_ratos_contra_tony_tentando_impedir_que_o_gato_recupere_sua_comida_roubada_seu_confronto_com_tony_uma_batalha_de_estrat_gia_e_ast_cia_j_que_ele_usa_suas_habilidades_ninja_para_tentar_frustrar_os_planos_do_gato_determinado">O Rato Ninja, conhecido como Sprinter, é um mestre das artes marciais roedoras. Com pelagem discreta e olhos astutos, ele é habilidoso nas sombras, usando sua agilidade e furtividade para se opor ao gato. Sprinter lidera uma resistência dos ratos contra Tony, tentando impedir que o gato recupere sua comida roubada. Seu confronto com Tony é uma batalha de estratégia e astúcia, já que ele usa suas habilidades ninja para tentar frustrar os planos do gato determinado.</string>
    <string name="wiki_purshecatmania">Wiki - PursheCatMania</string>
    <string name="cen_rio_1">Cenário 1</string>
    <string name="cen_rios1">Cenários</string>
    <string name="personagem">Personagem</string>
    <string name="Pulo">TODO</string>
    <string name="BoladeFogo">TODO</string>
    <string name="Chute">TODO</string>
    <string name="chute2">TODO</string>
    <string name="pulochef2">TODO</string>
    <string name="corvo">TODO</string>
    <string name="prota">TODO</string>
    <string name="susto">TODO</string>
    <string name="anjinho2">TODO</string>
    <string name="mapa">TODO</string>
</resources>