<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:foregroundTint="#FD0000">

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#C9FF0000"
        android:contentDescription="@string/asda3234234"
        android:onClick="IrPersonagem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="337dp"
        android:layout_height="356dp"
        android:text="@string/o_rato_ninja_conhecido_como_sprinter_um_mestre_das_artes_marciais_roedoras_com_pelagem_discreta_e_olhos_astutos_ele_habilidoso_nas_sombras_usando_sua_agilidade_e_furtividade_para_se_opor_ao_gato_sprinter_lidera_uma_resist_ncia_dos_ratos_contra_tony_tentando_impedir_que_o_gato_recupere_sua_comida_roubada_seu_confronto_com_tony_uma_batalha_de_estrat_gia_e_ast_cia_j_que_ele_usa_suas_habilidades_ninja_para_tentar_frustrar_os_planos_do_gato_determinado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="584dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bracodireitopulo"
        android:contentDescription="@string/Pulo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bracodireitoboladefogo"
        android:contentDescription="@string/BoladeFogo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="586dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bracodireitochute"
        android:contentDescription="@string/Chute" />


</androidx.constraintlayout.widget.ConstraintLayout>